@@ -9,31 +9,24 @@ package io.camunda.operate.it;
 
 import static io.camunda.operate.qa.util.RestAPITestUtil.createGetAllProcessInstancesQuery;
 import static io.camunda.operate.util.ThreadUtil.sleepFor;
-import static io.camunda.operate.webapp.rest.BatchOperationRestService.BATCH_OPERATIONS_URL;
-import static io.camunda.operate.webapp.rest.ProcessInstanceRestService.PROCESS_INSTANCE_URL;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import io.camunda.operate.util.*;
 import io.camunda.operate.webapp.elasticsearch.reader.ProcessInstanceReader;
+import io.camunda.operate.webapp.operation.dto.BatchOperationDto;
+import io.camunda.operate.webapp.operation.dto.BatchOperationRequestDto;
+import io.camunda.operate.webapp.operation.dto.CreateOperationRequestDto;
+import io.camunda.operate.webapp.operation.dto.OperationTypeDto;
 import io.camunda.operate.webapp.reader.*;
-import io.camunda.operate.webapp.rest.dto.OperationDto;
-import io.camunda.operate.webapp.rest.dto.VariableDto;
-import io.camunda.operate.webapp.rest.dto.VariableRequestDto;
-import io.camunda.operate.webapp.rest.dto.incidents.IncidentDto;
-import io.camunda.operate.webapp.rest.dto.listview.ListViewProcessInstanceDto;
-import io.camunda.operate.webapp.rest.dto.listview.ListViewQueryDto;
-import io.camunda.operate.webapp.rest.dto.listview.ListViewRequestDto;
-import io.camunda.operate.webapp.rest.dto.listview.ListViewResponseDto;
-import io.camunda.operate.webapp.rest.dto.listview.ProcessInstanceStateDto;
-import io.camunda.operate.webapp.rest.dto.operation.BatchOperationDto;
-import io.camunda.operate.webapp.rest.dto.operation.BatchOperationRequestDto;
-import io.camunda.operate.webapp.rest.dto.operation.CreateOperationRequestDto;
-import io.camunda.operate.webapp.rest.dto.operation.OperationTypeDto;
+import io.camunda.operate.webapp.reader.dto.OperationDto;
+import io.camunda.operate.webapp.reader.dto.incidents.IncidentDto;
+import io.camunda.operate.webapp.reader.dto.listview.ListViewProcessInstanceDto;
+import io.camunda.operate.webapp.reader.dto.listview.ListViewQueryDto;
+import io.camunda.operate.webapp.reader.dto.listview.ListViewRequestDto;
+import io.camunda.operate.webapp.reader.dto.listview.ListViewResponseDto;
+import io.camunda.operate.webapp.reader.dto.listview.ProcessInstanceStateDto;
+import io.camunda.operate.webapp.transform.DataAggregator;
+import io.camunda.operate.webapp.writer.BatchOperationWriter;
 import io.camunda.operate.webapp.zeebe.operation.*;
 import io.camunda.webapps.schema.descriptors.template.DecisionInstanceTemplate;
 import io.camunda.webapps.schema.descriptors.template.OperationTemplate;
@@ -46,23 +39,16 @@ import io.camunda.webapps.schema.entities.operation.OperationState;
 import io.camunda.webapps.schema.entities.operation.OperationType;
 import io.camunda.zeebe.model.bpmn.Bpmn;
 import io.camunda.zeebe.model.bpmn.BpmnModelInstance;
-import java.net.HttpURLConnection;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.test.web.servlet.MvcResult;
-import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
 
 public class OperationZeebeIT extends OperateZeebeAbstractIT {
-
-  private static final String QUERY_INSTANCES_URL = PROCESS_INSTANCE_URL;
-  private static final String QUERY_BATCH_OPERATIONS = BATCH_OPERATIONS_URL;
 
   @Autowired private CancelProcessInstanceHandler cancelProcessInstanceHandler;
 
@@ -78,15 +64,18 @@ public class OperationZeebeIT extends OperateZeebeAbstractIT {
 
   @Autowired private IncidentReader incidentReader;
 
-  @Autowired private VariableReader variableReader;
+  @Autowired private ListViewReader listViewReader;
 
   @Autowired private OperationReader operationReader;
 
   @Autowired private BatchOperationReader batchOperationReader;
 
-  @Autowired private ObjectMapper objectMapper;
+  @Autowired private DataAggregator dataAggregator;
 
   @Autowired private DecisionInstanceTemplate decisionInstanceTemplate;
+  @Autowired private ProcessReader processReader;
+  @Autowired private DecisionReader decisionReader;
+  @Autowired private BatchOperationWriter batchOperationWriter;
 
   private Long initialBatchOperationMaxSize;
 
@@ -120,14 +109,14 @@ public class OperationZeebeIT extends OperateZeebeAbstractIT {
     final Long processInstanceKey = startDemoProcessInstance();
 
     // when
-    final MvcResult mvcResult =
+    final BatchOperationDto batchOperationResponse =
         postOperationWithOKResponse(
             processInstanceKey,
             new CreateOperationRequestDto(OperationType.CANCEL_PROCESS_INSTANCE));
 
     // then
     final BatchOperationDto[] batchOperations =
-        postBatchOperationsRequestViaRest(new BatchOperationRequestDto().setPageSize(10));
+        queryBatchOperations(new BatchOperationRequestDto().setPageSize(10));
     assertThat(batchOperations).hasSize(1);
 
     final BatchOperationDto batchOperationDto = batchOperations[0];
@@ -139,8 +128,6 @@ public class OperationZeebeIT extends OperateZeebeAbstractIT {
     assertThat(batchOperationDto.getStartDate()).isNotNull();
     assertThat(batchOperationDto.getEndDate()).isNull();
 
-    final BatchOperationDto batchOperationResponse =
-        mockMvcTestRule.fromResponse(mvcResult, new TypeReference<>() {});
     assertThat(batchOperationResponse)
         .usingRecursiveComparison()
         // ignore because the Dto is created from an Entity (which doesn't have SortValues)
@@ -167,13 +154,13 @@ public class OperationZeebeIT extends OperateZeebeAbstractIT {
         incidentReader.getAllIncidentsByProcessInstanceKey(processInstanceKey);
 
     // when
-    final MvcResult mvcResult =
+    final BatchOperationDto batchOperationResponse =
         postOperationWithOKResponse(
             processInstanceKey, new CreateOperationRequestDto(OperationType.RESOLVE_INCIDENT));
 
     // then
     final BatchOperationDto[] batchOperations =
-        postBatchOperationsRequestViaRest(new BatchOperationRequestDto().setPageSize(10));
+        queryBatchOperations(new BatchOperationRequestDto().setPageSize(10));
     assertThat(batchOperations).hasSize(1);
 
     final BatchOperationDto batchOperationDto = batchOperations[0];
@@ -185,8 +172,6 @@ public class OperationZeebeIT extends OperateZeebeAbstractIT {
     assertThat(batchOperationDto.getStartDate()).isNotNull();
     assertThat(batchOperationDto.getEndDate()).isNull();
 
-    final BatchOperationDto batchOperationResponse =
-        mockMvcTestRule.fromResponse(mvcResult, new TypeReference<>() {});
     assertThat(batchOperationResponse)
         .usingRecursiveComparison()
         // ignore because the Dto is created from an Entity (which doesn't have SortValues)
@@ -214,12 +199,9 @@ public class OperationZeebeIT extends OperateZeebeAbstractIT {
     final Long processInstanceKey = startDemoProcessInstance();
 
     // when
-    final MvcResult mvcResult =
+    final BatchOperationDto batchOperationResponse =
         postOperationWithOKResponse(
             processInstanceKey, new CreateOperationRequestDto(OperationType.RESOLVE_INCIDENT));
-
-    final BatchOperationEntity batchOperationResponse =
-        mockMvcTestRule.fromResponse(mvcResult, new TypeReference<>() {});
     assertThat(batchOperationResponse.getInstancesCount()).isEqualTo(1);
     assertThat(batchOperationResponse.getOperationsTotalCount()).isEqualTo(0);
     final ListViewProcessInstanceDto processInstance =
@@ -323,198 +305,15 @@ public class OperationZeebeIT extends OperateZeebeAbstractIT {
     assertThat(incidents).isEmpty();
   }
 
-  @Test
-  public void testUpdateVariableOnProcessInstance() throws Exception {
-    // given
-    final Long processInstanceKey = startDemoProcessInstance();
-
-    // when
-    // we call UPDATE_VARIABLE operation on instance
-    final String varName = "a";
-    final String newVarValue = "\"newValue\"";
-    postUpdateVariableOperation(processInstanceKey, varName, newVarValue);
-    searchTestRule.refreshOperateSearchIndices();
-
-    // then variable with new value is returned
-    List<VariableDto> variables = getVariables(processInstanceKey, processInstanceKey);
-    assertThat(variables).hasSize(1);
-    assertVariable(variables, varName, newVarValue, true);
-
-    // when execute the operation
-    executeOneBatch();
-
-    // then
-    // before we process messages from Zeebe, the state of the operation must be SENT
-    ListViewProcessInstanceDto processInstance =
-        processInstanceReader.getProcessInstanceWithOperationsByKey(processInstanceKey);
-
-    assertThat(processInstance.isHasActiveOperation()).isEqualTo(true);
-    assertThat(processInstance.getOperations()).hasSize(1);
-    OperationDto operation = processInstance.getOperations().get(0);
-    assertThat(operation.getType()).isEqualTo(OperationType.UPDATE_VARIABLE);
-    assertThat(operation.getState()).isEqualTo(OperationState.SENT);
-    assertThat(operation.getId()).isNotNull();
-
-    // after we process messages from Zeebe, the state of the operation is changed to COMPLETED
-    // elasticsearchTestRule.processAllEvents(2);
-    searchTestRule.waitFor(operationsByProcessInstanceAreCompleted, processInstanceKey);
-    processInstance =
-        processInstanceReader.getProcessInstanceWithOperationsByKey(processInstanceKey);
-    assertThat(processInstance.isHasActiveOperation()).isEqualTo(false);
-    assertThat(processInstance.getOperations()).hasSize(1);
-    operation = processInstance.getOperations().get(0);
-    assertThat(operation.getType()).isEqualTo(OperationType.UPDATE_VARIABLE);
-    assertThat(operation.getState()).isEqualTo(OperationState.COMPLETED);
-
-    // check variables
-    variables = getVariables(processInstanceKey, processInstanceKey);
-    assertThat(variables).hasSize(1);
-    assertVariable(variables, varName, newVarValue, false);
-
-    // check batch operation progress
-    final BatchOperationDto[] batchOperations =
-        postBatchOperationsRequestViaRest(new BatchOperationRequestDto().setPageSize(10));
-    assertThat(batchOperations).hasSize(1);
-
-    final BatchOperationDto batchOperationDto = batchOperations[0];
-    assertThat(batchOperationDto.getType()).isEqualTo(OperationTypeDto.UPDATE_VARIABLE);
-    assertThat(batchOperationDto.getOperationsFinishedCount()).isEqualTo(1);
-    assertThat(batchOperationDto.getEndDate()).isNotNull();
-  }
-
-  private List<VariableDto> getVariables(final Long processInstanceKey, final Long scopeKey) {
-    return variableReader.getVariables(
-        String.valueOf(processInstanceKey),
-        new VariableRequestDto().setScopeId(String.valueOf(scopeKey)));
-  }
-
-  @Test
-  public void testAddVariableOnProcessInstance() throws Exception {
-    // given
-    final Long processInstanceKey = startDemoProcessInstance();
-
-    // TC1 when we call UPDATE_VARIABLE operation on instance
-    final String newVar1Name = "newVar1";
-    final String newVar1Value = "\"newValue1\"";
-    final String batchOperationId1 =
-        postAddVariableOperation(processInstanceKey, newVar1Name, newVar1Value);
-    final String newVar2Name = "newVar2";
-    final String newVar2Value = "\"newValue2\"";
-    final String batchOperationId2 =
-        postAddVariableOperation(processInstanceKey, newVar2Name, newVar2Value);
-    searchTestRule.refreshOperateSearchIndices();
-
-    // then
-    // new variables are not yet returned (OPE-1284)
-    List<VariableDto> variables = getVariables(processInstanceKey, processInstanceKey);
-    assertThat(variables).hasSize(1);
-    assertVariable(variables, "a", "\"b\"", false);
-    // operations are in SCHEDULED state
-    assertThat(getOperation(batchOperationId1).getState()).isEqualTo(OperationState.SCHEDULED);
-    assertThat(getOperation(batchOperationId2).getState()).isEqualTo(OperationState.SCHEDULED);
-
-    // TC2 execute the operations
-    executeOneBatch();
-
-    // then - before we process messages from Zeebe
-    // variables are still not returned
-    variables = getVariables(processInstanceKey, processInstanceKey);
-    assertThat(variables).hasSize(1);
-    assertVariable(variables, "a", "\"b\"", false);
-    // operations are in SENT state
-    assertThat(getOperation(batchOperationId1).getState()).isEqualTo(OperationState.SENT);
-    assertThat(getOperation(batchOperationId2).getState()).isEqualTo(OperationState.SENT);
-
-    // TC3 after we process messages from Zeebe, variables must have hasActiveOperation = false
-    searchTestRule.waitFor(operationsByProcessInstanceAreCompleted, processInstanceKey);
-
-    // then
-    // all three variables are returned
-    variables = getVariables(processInstanceKey, processInstanceKey);
-    assertThat(variables).hasSize(3);
-    assertVariable(variables, newVar1Name, newVar1Value, false);
-    assertVariable(variables, newVar2Name, newVar2Value, false);
-    // operations are in COMPLETED state
-    assertThat(getOperation(batchOperationId1).getState()).isEqualTo(OperationState.COMPLETED);
-    assertThat(getOperation(batchOperationId2).getState()).isEqualTo(OperationState.COMPLETED);
-  }
-
-  @Test
-  public void testAddVariableOnTask() throws Exception {
-    // given
-    final Long processInstanceKey = startDemoProcessInstance();
-    tester.waitUntil().variableExists("foo");
-    final Long taskAId = getFlowNodeInstanceId(processInstanceKey, "taskA");
-
-    // TC1 we call UPDATE_VARIABLE operation on instance
-    final String newVar1Name = "newVar1";
-    final String newVar1Value = "\"newValue1\"";
-    final String batchOperationId1 =
-        postAddVariableOperation(processInstanceKey, taskAId, newVar1Name, newVar1Value);
-    final String newVar2Name = "newVar2";
-    final String newVar2Value = "\"newValue2\"";
-    final String batchOperationId2 =
-        postAddVariableOperation(processInstanceKey, taskAId, newVar2Name, newVar2Value);
-    searchTestRule.refreshOperateSearchIndices();
-
-    // then
-    // new variables are not yet returned (OPE-1284)
-    List<VariableDto> variables = getVariables(processInstanceKey, taskAId);
-    assertThat(variables).hasSize(1);
-    assertVariable(variables, "foo", "\"b\"", false);
-    // operations are in SCHEDULED state
-    assertThat(getOperation(batchOperationId1).getState()).isEqualTo(OperationState.SCHEDULED);
-    assertThat(getOperation(batchOperationId2).getState()).isEqualTo(OperationState.SCHEDULED);
-
-    // TC2 execute the operations
-    executeOneBatch();
-
-    // then - before we process messages from Zeebe
-    // new variables are not yet returned (OPE-1284)
-    variables = getVariables(processInstanceKey, taskAId);
-    assertThat(variables).hasSize(1);
-    assertVariable(variables, "foo", "\"b\"", false);
-    // operations are in SENT state
-    assertThat(getOperation(batchOperationId1).getState()).isEqualTo(OperationState.SENT);
-    assertThat(getOperation(batchOperationId2).getState()).isEqualTo(OperationState.SENT);
-
-    // TC3 after we process messages from Zeebe, variables must have hasActiveOperation = false
-    // elasticsearchTestRule.processAllEvents(2, ImportValueType.VARIABLE);
-    // elasticsearchTestRule.waitFor(variableExistsCheck, processInstanceKey,
-    // processInstanceKey, newVar2Name);
-    searchTestRule.waitFor(operationsByProcessInstanceAreCompleted, processInstanceKey);
-
-    // then
-    // all three variables are returned
-    variables = getVariables(processInstanceKey, taskAId);
-    assertThat(variables).hasSize(3);
-    assertVariable(variables, newVar1Name, newVar1Value, false);
-    assertVariable(variables, newVar2Name, newVar2Value, false);
-    // operations are in COMPLETED state
-    assertThat(getOperation(batchOperationId1).getState()).isEqualTo(OperationState.COMPLETED);
-    assertThat(getOperation(batchOperationId2).getState()).isEqualTo(OperationState.COMPLETED);
-  }
-
-  private OperationDto getOperation(final String batchOperationId) throws Exception {
-    final List<OperationDto> operations =
-        operationReader.getOperationsByBatchOperationId(batchOperationId);
-    assertThat(operations).hasSize(1);
-    return operations.getFirst();
-  }
-
-  private void assertVariable(
-      final List<VariableDto> variables,
-      final String name,
-      final String value,
-      final Boolean hasActiveOperation) {
-    final List<VariableDto> collect =
-        variables.stream().filter(v -> v.getName().equals(name)).collect(Collectors.toList());
-    assertThat(collect).hasSize(1);
-    final VariableDto variable = collect.get(0);
-    assertThat(variable.getValue()).isEqualTo(value);
-    if (hasActiveOperation != null) {
-      assertThat(variable.isHasActiveOperation()).isEqualTo(hasActiveOperation);
-    }
+  private OperationEntity getOperation(
+      final String batchOperationId, final Long... processInstanceKeys) {
+    final List<OperationEntity> matchingOperations =
+        Arrays.stream(processInstanceKeys)
+            .flatMap(key -> operationReader.getOperationsByProcessInstanceKey(key).stream())
+            .filter(operation -> batchOperationId.equals(operation.getBatchOperationId()))
+            .toList();
+    assertThat(matchingOperations).hasSize(1);
+    return matchingOperations.getFirst();
   }
 
   @Test
@@ -554,12 +353,6 @@ public class OperationZeebeIT extends OperateZeebeAbstractIT {
     operation = processInstance.getOperations().get(0);
     assertThat(operation.getType()).isEqualTo(OperationType.UPDATE_VARIABLE);
     assertThat(operation.getState()).isEqualTo(OperationState.COMPLETED);
-
-    // check variables
-    final List<VariableDto> variables = getVariables(processInstanceKey, taskAId);
-    assertThat(variables).hasSize(1);
-    assertThat(variables.get(0).getName()).isEqualTo(varName);
-    assertThat(variables.get(0).getValue()).isEqualTo(varValue);
   }
 
   protected Long getFlowNodeInstanceId(final Long processInstanceKey, final String activityId) {
@@ -610,7 +403,7 @@ public class OperationZeebeIT extends OperateZeebeAbstractIT {
 
     // check batch operation progress
     final BatchOperationDto[] batchOperations =
-        postBatchOperationsRequestViaRest(new BatchOperationRequestDto().setPageSize(10));
+        queryBatchOperations(new BatchOperationRequestDto().setPageSize(10));
     assertThat(batchOperations).hasSize(2);
     BatchOperationDto batchOperationDto = batchOperations[0];
     assertThat(batchOperationDto.getType()).isEqualTo(OperationTypeDto.RESOLVE_INCIDENT);
@@ -768,56 +561,6 @@ public class OperationZeebeIT extends OperateZeebeAbstractIT {
   }
 
   @Test
-  public void testFailAddVariableOperationAsVariableAlreadyExists() throws Exception {
-    // given
-    final Long processInstanceKey = startDemoProcessInstance();
-
-    // when we call ADD_VARIABLE operation for the variable that already exists
-    final String newVarName = "a";
-    final CreateOperationRequestDto op = new CreateOperationRequestDto(OperationType.ADD_VARIABLE);
-    op.setVariableName(newVarName);
-    op.setVariableValue("\"newValue\"");
-    final String scope = ConversionUtils.toStringOrNull(processInstanceKey);
-    op.setVariableScopeId(scope);
-    final MvcResult mvcResult =
-        postOperation(processInstanceKey, op, HttpURLConnection.HTTP_BAD_REQUEST);
-
-    // then
-    assertThat(mvcResult.getResolvedException().getMessage())
-        .isEqualTo(
-            String.format(
-                "Cannot add variable \"%s\" in scope \"%s\" of processInstanceId=%s: a variable with this name already exists.",
-                newVarName, scope, processInstanceKey));
-  }
-
-  @Test
-  public void testFailAddVariableOperationAsOperationAlreadyExists() throws Exception {
-    // given
-    final Long processInstanceKey = startDemoProcessInstance();
-
-    // when we call ADD_VARIABLE operation for the first time
-    final String newVarName = "newVar";
-    final CreateOperationRequestDto op = new CreateOperationRequestDto(OperationType.ADD_VARIABLE);
-    op.setVariableName(newVarName);
-    op.setVariableValue("\"newValue\"");
-    final String scope = ConversionUtils.toStringOrNull(processInstanceKey);
-    op.setVariableScopeId(scope);
-    // then it succeeds
-    postOperation(processInstanceKey, op, HttpURLConnection.HTTP_OK);
-
-    // when we call the same operation for the second time, it fails
-    final MvcResult mvcResult =
-        postOperation(processInstanceKey, op, HttpURLConnection.HTTP_BAD_REQUEST);
-
-    // then
-    assertThat(mvcResult.getResolvedException().getMessage())
-        .isEqualTo(
-            String.format(
-                "Cannot add variable \"%s\" in scope \"%s\" of processInstanceId=%s: an ADD_VARIABLE operation for this variable already exists.",
-                newVarName, scope, processInstanceKey));
-  }
-
-  @Test
   public void testDeleteProcessDefinitionDeletes() throws Exception {
 
     // given
@@ -841,8 +584,9 @@ public class OperationZeebeIT extends OperateZeebeAbstractIT {
 
     // when
     // we call DELETE_PROCESS_DEFINITION operation on process
+    final var processEntity = processReader.getProcess(processDefinitionKey);
     final BatchOperationEntity batchOperationEntity =
-        deleteProcessWithOkResponse(String.valueOf(processDefinitionKey));
+        batchOperationWriter.scheduleDeleteProcessDefinition(processEntity);
 
     // and execute the operation
     executeOneBatch();
@@ -852,7 +596,8 @@ public class OperationZeebeIT extends OperateZeebeAbstractIT {
     // the state of operation is COMPLETED, and the instances are deleted
     final ListViewResponseDto processInstances = getProcessInstances(processInstanceQuery);
     assertThat(processInstances.getProcessInstances()).isEmpty();
-    final OperationDto operation = getOperation(batchOperationEntity.getId());
+    final OperationEntity operation =
+        getOperation(batchOperationEntity.getId(), processInstanceKey1, processInstanceKey2);
     assertThat(operation.getType()).isEqualTo(OperationType.DELETE_PROCESS_DEFINITION);
     assertThat(operation.getState()).isEqualTo(OperationState.COMPLETED);
     assertThat(operation.getErrorMessage()).isNull();
@@ -892,8 +637,9 @@ public class OperationZeebeIT extends OperateZeebeAbstractIT {
 
     // when
     // we call DELETE_PROCESS_DEFINITION operation on process
+    final var processEntity = processReader.getProcess(processDefinitionKey);
     final BatchOperationEntity batchOperationEntity =
-        deleteProcessWithOkResponse(String.valueOf(processDefinitionKey));
+        batchOperationWriter.scheduleDeleteProcessDefinition(processEntity);
 
     // and execute the operation
     executeOneBatch();
@@ -903,7 +649,8 @@ public class OperationZeebeIT extends OperateZeebeAbstractIT {
     // the state of operation is FAILED, and the instances are not deleted
     final ListViewResponseDto processInstances = getProcessInstances(processInstanceQuery);
     assertThat(processInstances.getProcessInstances()).size().isEqualTo(2);
-    final OperationDto operation = getOperation(batchOperationEntity.getId());
+    final OperationEntity operation =
+        getOperation(batchOperationEntity.getId(), processInstanceKey1, processInstanceKey2);
     assertThat(operation.getType()).isEqualTo(OperationType.DELETE_PROCESS_DEFINITION);
     assertThat(operation.getState()).isEqualTo(OperationState.FAILED);
     assertThat(operation.getErrorMessage()).contains("Process instances still running.");
@@ -927,11 +674,13 @@ public class OperationZeebeIT extends OperateZeebeAbstractIT {
     List<DecisionInstanceEntity> decisionInstanceEntities =
         searchAllDocuments(decisionInstanceTemplate.getAlias(), DecisionInstanceEntity.class);
     final String decisionDefinitionId = decisionInstanceEntities.get(0).getDecisionDefinitionId();
+    final var decisionDefinitionEntity =
+        decisionReader.getDecision(Long.valueOf(decisionDefinitionId));
 
     // when
     // we call DELETE_DECISION_DEFINITION operation
     final BatchOperationEntity batchOperationEntity =
-        deleteDecisionWithOkResponse(String.valueOf(decisionDefinitionId));
+        batchOperationWriter.scheduleDeleteDecisionDefinition(decisionDefinitionEntity);
 
     // and execute the operation
     executeOneBatch();
@@ -942,7 +691,8 @@ public class OperationZeebeIT extends OperateZeebeAbstractIT {
     decisionInstanceEntities =
         searchAllDocuments(decisionInstanceTemplate.getAlias(), DecisionInstanceEntity.class);
     assertThat(decisionInstanceEntities).isEmpty();
-    final OperationDto operation = getOperation(batchOperationEntity.getId());
+    final OperationEntity operation =
+        getOperation(batchOperationEntity.getId(), processInstanceKey1, processInstanceKey2);
     assertThat(operation.getType()).isEqualTo(OperationType.DELETE_DECISION_DEFINITION);
     assertThat(operation.getState()).isEqualTo(OperationState.COMPLETED);
     assertThat(operation.getErrorMessage()).isNull();
@@ -992,29 +742,13 @@ public class OperationZeebeIT extends OperateZeebeAbstractIT {
   private ListViewResponseDto getProcessInstances(final ListViewQueryDto query) throws Exception {
     final ListViewRequestDto request = new ListViewRequestDto(query);
     request.setPageSize(100);
-    final MockHttpServletRequestBuilder getProcessInstancesRequest =
-        post(query())
-            .content(mockMvcTestRule.json(request))
-            .contentType(mockMvcTestRule.getContentType());
-
-    final MvcResult mvcResult =
-        mockMvc
-            .perform(getProcessInstancesRequest)
-            .andExpect(status().isOk())
-            .andExpect(content().contentType(mockMvcTestRule.getContentType()))
-            .andReturn();
-
-    return mockMvcTestRule.fromResponse(mvcResult, new TypeReference<>() {});
+    return listViewReader.queryProcessInstances(request);
   }
 
-  private String query() {
-    return QUERY_INSTANCES_URL;
-  }
-
-  private BatchOperationDto[] postBatchOperationsRequestViaRest(
-      final BatchOperationRequestDto query) throws Exception {
-    final MvcResult mvcResult = postRequest(QUERY_BATCH_OPERATIONS, query);
-    return objectMapper.readValue(
-        mvcResult.getResponse().getContentAsString(), BatchOperationDto[].class);
+  private BatchOperationDto[] queryBatchOperations(final BatchOperationRequestDto query) {
+    final List<BatchOperationDto> batchOperations =
+        dataAggregator.enrichBatchEntitiesWithMetadata(
+            batchOperationReader.getBatchOperations(query));
+    return batchOperations.toArray(new BatchOperationDto[0]);
   }
 }
